--- a/fileRead0.ipynb
+++ b/fileRead0.ipynb
@@ -5,14 +5,14 @@
         "collapsed": true
       },
       "cell_type": "markdown",
-      "source": "# ファイルの利用\n各行に一つの数値が書かれているテキストファイルを読み、データ数と総和を返す\n\nファイルオブジェクトfは、iteratorであるためnext()を使って一行毎に読み込む"
+      "source": "# ファイルを読む\n\nファイルをopenし、テキストとして全体を読み込む例\n- open(ファイル名)でファイルを開く。戻り値はfile object\n- file objectのread()メソッドでテキストファイルの全体を読み込む"
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "def sumDataFromFile(filename):\n    sum = 0\n    count = 0\n    with open(filename) as f:#ファイルを開く\n        while True:\n            try:\n                line= next(f)\n                if line:\n                    aline = line.rstrip()\n                    value = int(aline)#整数へ変換\n                    sum += value\n                    count += 1\n            except:\n                break\n    return sum,count",
+      "source": "def readTextFile(filename):#ファイルからテキストを読み、そのテキストを返す\n    with open(filename) as f:\n        text = f.read()\n    return text",
       "execution_count": null,
       "outputs": []
     },
@@ -21,7 +21,16 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "filename='data1.txt'\nsumOfData, numData = sumDataFromFile(filename)\naverage = sumOfData/numData\nprint(f'データ数 {numData}')\nprint(f'総和 {sumOfData}')\nprint(f'平均 {average}')",
+      "source": "filename='data1.txt'\ntext = readTextFile(filename)\nprint(text)\n",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
       "execution_count": null,
       "outputs": []
     }
