--- a/fileRead1.ipynb
+++ b/fileRead1.ipynb
@@ -3,15 +3,15 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "各行に一つの数値が書かれているテキストファイルを読み、データ数と総和を返す"
+      "source": "# ファイルの利用\n各行に一つの数値が書かれているテキストファイルを読み、数値データをリストとして返す\n\nrstrip()は、文字列の右側から文字を取り除く。\n引数に何も指定しない場合には、「空白」（スペース、タブ、改行）をすべて取り除く。\n\"r\"は、右(right)を意味している。\n"
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "def sumData(filename):\n    sum = 0\n    count = 0\n    with open(filename) as f:#ファイルを開く\n        while True:\n            line = f.readline()#一行読む\n            aline = line.rstrip('\\n')#改行をとる\n            if aline:\n                v = int(aline)#整数へ変換\n                sum += v\n                count += 1\n            else:\n                break\n    return sum,count",
-      "execution_count": 1,
+      "source": "def readFileByLine(filename):\n    data=[]\n    with open(filename) as f:#ファイルを開く\n        while True:\n            line = f.readline()#一行読む\n            aline = line.rstrip()#改行を含め、余分な空白を取り除く\n            if aline:\n                value = int(aline)#整数へ変換\n                data.append(value)\n            else:\n                break\n    return data",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -19,15 +19,18 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "filename='data1.txt'\na,c = sumData(filename)\nv = a/c\nprint(f'データ数 {c}')\nprint(f'総和 {a}')\nprint(f'平均 {v}')",
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": "データ数 10\n総和 790\n平均 79.0\n",
-          "name": "stdout"
-        }
-      ]
+      "source": "filename='data1.txt'\ndataList = readFileByLine(filename)\nprint(dataList)",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
